--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "vue-loader": "^16.8.3"
+        "vue-loader": "^15.9.8"
     },
     "dependencies": {
-        "vue": "^3.2.31"
+        "@fortawesome/fontawesome-svg-core": "^1.3.0",
+        "@fortawesome/free-solid-svg-icons": "^6.0.0",
+        "@fortawesome/vue-fontawesome": "^2.0.6",
+        "vue": "^2.6.11",
+        "vue-template-compiler": "^2.6.11"
     }
 }
